more spacing fixes for thumb

--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ a:visited {
 .project-thumb-wrapper {
   margin: 0px 10px;
   padding: 5px;
-  width: 125px;
+  width: 130px;
   display: inline-block;
   text-decoration: none;
 }
